{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 20,
  "lineage": "817a563e-d46c-8c1c-ce70-53983b5c0355",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "orpheus_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035636365361:internet-gateway/igw-0fc2fff5a1e0c2540",
            "id": "igw-0fc2fff5a1e0c2540",
            "owner_id": "035636365361",
            "tags": {
              "Name": "orpheus-igw"
            },
            "tags_all": {
              "Name": "orpheus-igw"
            },
            "vpc_id": "vpc-08b24e4ed0e33f62b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.orpheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "orpheus_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035636365361:route-table/rtb-06e4777aebbb54658",
            "id": "rtb-06e4777aebbb54658",
            "owner_id": "035636365361",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc2fff5a1e0c2540",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "orpheus-rt"
            },
            "tags_all": {
              "Name": "orpheus-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b24e4ed0e33f62b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.orpheus_igw",
            "aws_vpc.orpheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "orpheus_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e071fe7ab554487",
            "route_table_id": "rtb-06e4777aebbb54658",
            "subnet_id": "subnet-0a3585c2442868197"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.orpheus_igw",
            "aws_route_table.orpheus_rt",
            "aws_subnet.orpheus_subnet",
            "aws_vpc.orpheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "orpheus_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035636365361:security-group/sg-064038380d335f7a8",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064038380d335f7a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "orpheus-sg",
            "name_prefix": "",
            "owner_id": "035636365361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "orpheus-sg"
            },
            "tags_all": {
              "Name": "orpheus-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b24e4ed0e33f62b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.orpheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "orpheus_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035636365361:subnet/subnet-0a3585c2442868197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3585c2442868197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "035636365361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orpheus-subnet"
            },
            "tags_all": {
              "Name": "orpheus-subnet"
            },
            "vpc_id": "vpc-08b24e4ed0e33f62b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.orpheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "orpheus_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035636365361:vpc/vpc-08b24e4ed0e33f62b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ae2cc912690f1b7",
            "default_route_table_id": "rtb-054848ce4ca75d92c",
            "default_security_group_id": "sg-0c99d344be7e57d77",
            "dhcp_options_id": "dopt-0536779c64fff8c7f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b24e4ed0e33f62b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054848ce4ca75d92c",
            "owner_id": "035636365361",
            "tags": {
              "Name": "orpheus-vpc"
            },
            "tags_all": {
              "Name": "orpheus-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}